# picostars

./: CMakeLists.txt  Info.plist
headers/: TitleScene.h  alignment.h  app_constants.h  app_state.h  assets.h  error.h  image.h  lifecycle.h  loader.h  node.cpp  node.h  scene_nodes.h  title_scene.h
headers/scene/: LocationProvider.cpp  LocationProvider.h  Node.cpp  Node.h  NodeContent.cpp  NodeContent.h  Scene.h  Types.h  Utility.h
resources/: AppIcon.icns
src/: TitleScene.cpp  app_constants.cpp  app_sdl_lifecycle.cpp  assets.cpp  image.cpp  loader.cpp  main.cpp  scene_nodes.cpp  title_scene.cpp
support/: CodeSign.cmake  CopyFramework.cmake  CopyResources.cmake
